fix text alignment in notifications

--- a/Numix-Cinnamon/cinnamon/cinnamon.css
+++ b/Numix-Cinnamon/cinnamon/cinnamon.css
@@ -718,27 +718,18 @@ StScrollBar StButton#hhandle:active {
   spacing-columns: 10px;
   width: 34em;
   margin-from-right-edge-of-screen: 6px;
-  font-weight: bold;
   font-size: 12px;
   color: #eee;
 }
 
 #notification CinnamonGenericContainer * {
-  font-weight: normal;
-  font-size: 12px;
   color: rgba(238, 238, 238, 0.65);
+  padding-bottom: .3em;
 }
 
-#notification CinnamonGenericContainer *:first-child {
-  font-weight: bold;
-  font-size: 12px;
-  padding-top: .3em;
+#notification CinnamonGenericContainer *:first-child, #notification CinnamonGenericContainer *:last-child {
   color: #eee;
-}
-
-#notification CinnamonGenericContainer *:last-child {
-  padding-top: .3em;
-  color: #eee;
+  padding-bottom: 0;
 }
 
 #notification-body {
